<?xml version="1.0" encoding="utf-8"?><!-- XML的版本以及编码方式 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"><!-- 定义一个线性布局 -->
	<com.test.PathFind.GameView
		android:id="@+id/gameView"  
  	  	android:layout_width="fill_parent" 
  	  	android:layout_height="wrap_content"/><!-- 添加自己实现的View -->
    <AbsoluteLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"><!-- 再添加一个坐标布局 -->
    xmlns:android="http://schemas.android.com/apk/res/android"
       <Spinner
        	android:id="@+id/searchMethod"
    		android:layout_width="160dp" 
    		android:layout_height="40dp" 
    		android:layout_x="5dp"
    		android:layout_y="0dp"/>
        <Spinner
        	android:id="@+id/target"
    		android:layout_width="wrap_content" 
    		android:layout_height="40dp" 
    		android:layout_x="5dp"
    		android:layout_y="40dp"/>	
    	<Button
    		android:id="@+id/clean_path"
    		android:layout_width="wrap_content" 
    		android:layout_height="40dp" 
    		android:text="@string/clean_path"
    		android:layout_x="170dp"
    		android:layout_y="0dp"/>
    	<Button
    		android:id="@+id/clean_map"
    		android:layout_width="wrap_content" 
    		android:layout_height="40dp" 
    		android:text="@string/clean_map"
    		android:layout_x="170dp"
    		android:layout_y="40dp"/>
    	<Button
    		android:id="@+id/go"
    		android:layout_width="60dp" 
    		android:layout_height="80dp" 
    		android:text="@string/go"
    		android:layout_x="260dp"
    		android:layout_y="0dp"/>
    	<Button
    		android:id="@+id/decelerate"
    		android:layout_width="wrap_content" 
    		android:layout_height="40dp" 
    		android:text="@string/slow_down"
    		android:layout_x="170dp"
    		android:layout_y="80dp"/>
    	<Button
    		android:id="@+id/accelerate"
    		android:layout_width="wrap_content" 
    		android:layout_height="40dp" 
    		android:text="@string/speed_up"
    		android:layout_x="240dp"
    		android:layout_y="80dp"/>
    	<TextView
    		android:id="@+id/steps"
    		android:layout_width="wrap_content" 
    		android:layout_height="wrap_content" 
    		android:text="@string/used_steps"
    		android:layout_x="10dp"
    		android:layout_y="80dp"/>
    	<TextView
    		android:id="@+id/pathLength"
    		android:layout_width="wrap_content" 
    		android:layout_height="wrap_content" 
    		android:text="@string/length_of_path"
    		android:layout_x="10dp"
    		android:layout_y="100dp"/>
    </AbsoluteLayout>
</LinearLayout>
